--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.8",
     "framer-motion": "^12.4.7",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "swiper": "^11.2.4"
   },
