--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.8",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
