--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemailer": "^6.10.0"
+    "mongoose": "^8.12.1",
+    "nodemailer": "^6.10.0",
+    "razorpay": "^2.9.6"
   }
 }
