--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^7.2.0",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
