--- a/backend/package.json
+++ b/backend/package.json
@@ -20,5 +20,8 @@
     "mongoose": "^8.12.1",
     "nodemailer": "^6.10.0",
     "razorpay": "^2.9.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
