--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",  
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "razorpay": "^2.9.6"
   },
