new design changes for mobile devices

--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,7 @@
 MONGDB_USERNAME=aeroedgetechnologies
 MONGDB_PASSWORD=PGXToQu8R3QWipL2
 MONGDB_URI=mongodb+srv://aeroedgetechnologies:PGXToQu8R3QWipL2@cluster0.y2cuq.mongodb.net/?retryWrites=true&w=majority
-RAZORPAY_KEY_ID=rzp_test_HyQ8dXoaQtM9D7
+# RAZORPAY_KEY_ID=rzp_test_HyQ8dXoaQtM9D7
+# RAZORPAY_KEY_SECRET=19H9oEwxeknRvsOprA7BY79l
+RAZORPAY_KEY_ID=rzp_test_D4HECUHMuuWhes
 RAZORPAY_KEY_SECRET=19H9oEwxeknRvsOprA7BY79l
