--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-leaflet": "^5.0.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.4",
     "toastify-js": "^1.12.0"
   },
