--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
+    "pdfkit": "^0.16.0",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
