--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.8",
+    "date-fns": "^4.1.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
